<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="210dp"
    android:layout_height="fill_parent"
    android:background="@color/content_bg" >

    <LinearLayout
        android:layout_width="210dp"
        android:layout_height="fill_parent"
        android:background="@color/content_bg"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/title_bg"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/about"
            android:textColor="#efff"
            android:textSize="16dp" >
        </TextView>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_selector"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/QQ_group"
            android:textSize="16dp" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/black_color" />

        <TextView
            android:id="@+id/rM_weixin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_selector"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/wechat_id"
            android:textSize="16dp" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/black_color" />

        <TextView
            android:id="@+id/rM_colormar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_selector"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/website"
            android:textSize="16dp" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/black_color" />

        <TextView
            android:id="@+id/rM_update"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_selector"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/check_updates"
            android:textSize="16dp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/title_bg"
            android:padding="5dp"
            android:text="@string/feedback"
            android:textColor="#efff"
            android:textSize="16dp" >
        </TextView>

        <TextView
            android:id="@+id/rM_help"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_selector"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/introduction"
            android:textSize="16dp" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/black_color" />

        <TextView
            android:id="@+id/rM_feedback"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_selector"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/feedback"
            android:textSize="16dp" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/black_color" />

        <TextView
            android:id="@+id/rM_moreApps"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_selector"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/more_apps"
            android:textSize="16dp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/title_bg"
            android:padding="5dp"
            android:text="@string/support"
            android:textColor="#efff"
            android:textSize="16dp" >
        </TextView>

        <TextView
            android:id="@+id/rM_vote"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_selector"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/rate_app"
            android:textSize="16dp" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/black_color" />

        <TextView
            android:id="@+id/rM_donateApp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_selector"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/donation"
            android:textSize="16dp" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/black_color" />

        <TextView
            android:id="@+id/rM_thanksApp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_selector"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/thanks"
            android:textSize="16dp" 
            android:visibility="invisible"/>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/black_color" 
            android:visibility="invisible"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:background="@color/content_bg" >
        </TextView>
    </LinearLayout>

</ScrollView>