<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="210dp"
    android:layout_height="fill_parent"
    android:background="@color/content_bg" >

    <LinearLayout
        android:layout_width="210dp"
        android:layout_height="fill_parent"
        android:background="@color/content_bg"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/title_bg"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/menu"
            android:textColor="#efff"
            android:textSize="16dp" >
        </TextView>

        <TextView
            android:id="@+id/setting"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_selector"
            android:drawableLeft="@drawable/more_ic_setting"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/setting"
            android:textSize="16dp" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/black_color" />

        <TextView
            android:id="@+id/skins"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_selector"
            android:drawableLeft="@drawable/more_ic_theme"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/skin"
            android:textSize="16dp" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/black_color" />

        <TextView
            android:id="@+id/vote"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_selector"
            android:drawableLeft="@drawable/more_ic_vote"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/rate_app"
            android:textSize="16dp" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/black_color" />

        <TextView
            android:id="@+id/feedback"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_selector"
            android:drawableLeft="@drawable/more_ic_feedback"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/feedback"
            android:textSize="16dp" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/black_color" />

        <TextView
            android:id="@+id/donateApp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_selector"
            android:drawableLeft="@drawable/more_ic_donate"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/donation"
            android:textSize="16dp" />
        
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/black_color" />

        <TextView
            android:id="@+id/jobs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_selector"
            android:drawableLeft="@drawable/more_ic_join"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/search"
            android:textSize="16dp" 
            android:visibility="gone"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/title_bg"
            android:padding="5dp"
            android:textColor="#efff"
            android:textSize="16dp" 
            android:text="@string/city_list">
        </TextView>

        <ListView
            android:id="@+id/citylistView"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:background="@color/content_bg"
            android:cacheColorHint="@null"
            android:listSelector="@null" >
        </ListView>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/black_color" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:background="@color/content_bg" >
        </TextView>
    </LinearLayout>

</RelativeLayout>