<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/content_bg" >

    <RelativeLayout
        android:id="@+id/rlTodayInfo"
        android:background="@color/content_bg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="5dp" >

        <TextView
            android:id="@+id/cityTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white_color"
            android:textSize="36dp" >
        </TextView>

        <TextView
            android:id="@+id/aqiTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_toLeftOf="@+id/aqiMsgTV"
            android:textColor="@color/white_color"
            android:textSize="18dp"
            android:textStyle="bold" >
        </TextView>

        <TextView
            android:id="@+id/aqiMsgTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="12dp"
            android:textColor="#aaa"
            android:textSize="14dp" >
        </TextView>

        <ImageView
            android:id="@+id/todayImg"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_below="@+id/cityTV"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/todayTempNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cityTV"
            android:layout_toRightOf="@+id/todayImg"
            android:textColor="@color/white_color"
            android:textSize="64dp" >
        </TextView>

        <TextView
            android:id="@+id/todayTemp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/todayTempNow"
            android:layout_toRightOf="@+id/todayImg"
            android:textColor="@color/default_text_color"
            android:textSize="18dp" >
        </TextView>

        <TextView
            android:id="@+id/todayDesc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/todayTemp"
            android:layout_toRightOf="@+id/todayImg"
            android:text="@string/loading_msg"
            android:textColor="@color/default_text_color"
            android:textSize="16dp" >
        </TextView>

        <TextView
            android:id="@+id/todayWet"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/todayDesc"
            android:layout_toRightOf="@+id/todayImg"
            android:textColor="@color/dark_blue_color"
            android:textSize="12dp" >
        </TextView>

        <TextView
            android:id="@+id/todayWind"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/todayWet"
            android:layout_toRightOf="@+id/todayImg"
            android:textColor="@color/dark_blue_color"
            android:textSize="12dp" >
        </TextView>

        <TextView
            android:id="@+id/tvInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/cityTV"
            android:layout_alignBottom="@+id/cityTV"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/cityTV"
            android:textColor="#aaa" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/tabs"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_above="@+id/forcast_line"
        android:layout_marginLeft="5dp"
        android:gravity="center|left"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/btnForcast"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@drawable/tab_select"
            android:gravity="center"
            android:text="@string/forecast"
            android:textSize="16dp" />

        <ImageView
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="10dp"
            android:background="@color/black_color" />

        <TextView
            android:id="@+id/btnChart"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/trend"
            android:textSize="16dp" />

        <ImageView
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="10dp"
            android:background="@color/black_color" />

        <TextView
            android:id="@+id/btnIndexs"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/index"
            android:textSize="16dp" />
        <ImageView
            android:id="@+id/imgTaobao"
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="10dp"
            android:background="@color/black_color" 
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/btnTaobao"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/taobao"
            android:textSize="16dp" 
            android:visibility="invisible"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/forcast_line"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/forcastLLayout"
        android:background="@color/black_color"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:id="@+id/forcastLLayout"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_above="@+id/updateTimeTV"
        android:clickable="true"
        android:gravity="center"
        android:orientation="horizontal" >
    </LinearLayout>

    <TextView
        android:id="@+id/updateTimeTV"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="3dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="4dp"
        android:gravity="right"
        android:singleLine="true"
        android:textColor="@color/gray_text_color"
        android:textSize="12dp" >
    </TextView>

    <ImageView
        android:layout_width="1dp"
        android:layout_height="fill_parent"
        android:background="@color/black_color"
        android:contentDescription="@string/app_name" />

    <ImageView
        android:layout_width="1dp"
        android:layout_height="fill_parent"
        android:layout_alignParentRight="true"
        android:background="@color/black_color"
        android:contentDescription="@string/app_name" />

</RelativeLayout>